image: Don't use the fast path if it's wrong

Fixes the new "operator-source" test and the original report from:
http://lists.cairographics.org/archives/cairo/2011-March/021827.html

I tested this code path with all operators and "source" is the only one which
causes issues with rendering outside of the boxes.

Possibly fixes: https://bugs.freedesktop.org/show_bug.cgi?id=35407

Signed-off-by: Uli Schlachter <psychon@znc.in>